# teer-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  test_import.py  test_ingest_url.py  test_teer_client.py
docs/: usage_reports.md
examples/: basic_usage.py  billing_meter_events.py  comprehensive_usage_reports.py  custom_base_url.py  usage_payload_example.py
scripts/: publish.py  version.py
src/teer/: __about__.py  __init__.py  http.py  types.py
src/teer/resources/: __init__.py  base.py  billing.py  ingest.py
tests/: __init__.py  test_billing.py
